JSW Devsb/src/objects/User_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Visited__c</fullName>
        <label>Date Visited</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visited_Date__c</fullName>
        <label>Visited Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>User Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Date_Visited__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>User Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>